kopf-example-limitrange-np-operator/app/networkpolicy-default-deny-egress.yaml

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-egress
  namespace: "{name}"
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Egress
