kopf-example-limitrange-np-operator/app/networkpolicy-default-deny-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: "{namespace}"
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Ingress
